--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en-IN">
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E08GF65YYE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E08GF65YYE');
 </script>
     <title>SpinBetter India Review 2026 – ₹10,000 Welcome Bonus | Promo Code & Registration</title>
 <meta name="description" content="SpinBetter India Review 2026 – Get ₹10,000 Welcome Bonus with Promo Code. Fast registration, instant deposits, 10-minute withdrawals & live sports betting. Join SpinBetter India today!" />
